--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Suggests:
     jsonlite,
     testthat,
     covr,
-    ggthemes
+    ggthemes,
+    vdiffr
 Additional_repositories: https://r.docker.stat.auckland.ac.nz
 Description: Simple plotting function(s) for exploratory data analysis with
     flexible plotting options to allow users to customise plots.
